2009-01-04  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_driver.c: (VIAPreInit):

	Patch submitted by Robert Bridge to clean up compiler
        warnings.  Should close trac ticket #243.  Thanks
	RobbieAB.

2008-12-29  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_accel.c: (viaInitXAA):
	* src/via_driver.c: (VIAMapMMIO), (VIAMapFB):

	Finally tracked down the XAA libpciaccess bug.  Also
	Realized I had not enabled write-combining on the main
	framebuffer.  This should give a small speed boost.

2008-12-26  Jon Nettleton <jon.nettleton@gmail.com>

	* src/via_mode.h:

	Added support for all Modes in ViaPanelNativeModes to
	ViaPanelModes.  Modes used are from Via's released driver
	in ViaSupportModes.

2008-11-04  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_crtc.c: (ViaFirstCRTCSetMode), (ViaSecondCRTCSetMode):

	Found needed register writes that are needed so VX800 doesn't
	crash when CRT is not enabled.  I also removed NEEDS FIXING
        comments from them as they are obviously needed.

2008-11-03  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_accel.c: (viaSubsequentMono8x8PatternFillRect),
	(viaSetupForSolidLine), (viaSubsequentSolidHorVertLine),
	(viaSetupForDashedLine), (viaAccelMarkSync):

	A few more acceleration tweaks for the VX800.  
	This should fix all the XAA rendering issues.
	This should also allow 800x480 Panels to work without
	custom modelines.

2008-11-02  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_accel.c: (viaFlushPCI), (viaDisableVQ),
	(viaInitialize2DEngine), (viaAccelSync), (viaPitchHelper),
	(viaAccelClippingHelper), (viaAccelSolidHelper),
	(viaAccelTransparentHelper), (viaAccelCopyHelper),
	(viaSetupForScreenToScreenCopy), (viaSubsequentScreenToScreenCopy),
	(viaSetupForSolidFill), (viaSubsequentSolidFillRect),
	(viaSetupForMono8x8PatternFill),
	(viaSubsequentMono8x8PatternFillRect),
	(viaSetupForColor8x8PatternFill),
	(viaSubsequentColor8x8PatternFillRect),
	(viaSetupForCPUToScreenColorExpandFill),